--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* ========================================================================== *\
 +  PARTIAL SCSS GROUP 1 - `abstracts/`
 \* ========================================================================== */
@@ -654,7 +655,7 @@ p,
 li,
 blockquote,
 figcaption {
-  padding: 0;
+  padding: 0.5rem;
   color: var(--color-foreground);
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
@@ -1578,7 +1579,6 @@ ul.menu-left.collapse {
           box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  position: relative;
   overflow: hidden;
   min-width: calc(320px - 2rem);
   max-width: calc((320px / 3) + 320px);
@@ -1911,10 +1911,6 @@ input:checked + .slider::before {
   place-content: center;
 }
 
-.hot-items__title {
-  padding: 2rem 0 0.5rem 0;
-}
-
 .hot-item__container {
   -ms-flex-preferred-size: auto;
       flex-basis: auto;
@@ -1924,6 +1920,7 @@ input:checked + .slider::before {
   -ms-flex-negative: 1;
       flex-shrink: 1;
   place-self: center;
+  position: relative;
   margin: 1.5rem;
 }
 
@@ -2033,81 +2030,112 @@ input:checked + .slider::before {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
   place-content: center;
   place-items: center;
-  background-color: cornsilk;
-}
-
-.about__title {
-  padding: 1rem;
-  background-color: saddlebrown;
+  background: radial-gradient(#003, #000);
 }
 
 .about__container--visual {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 50%;
           flex: 1 1 50%;
-  background-color: bisque;
+  padding: 0.5rem;
+  margin: 1.5rem;
 }
 
 .about__image {
-  background-color: navajowhite;
+  height: 100%;
 }
 
 .about__container--text {
   width: 100%;
   height: 80vh;
-  background-color: sienna;
-}
-
-.about__title--text {
-  padding-top: 0;
-  background-color: burlywood;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 50%;
+          flex: 1 1 50%;
+  padding: 0.5rem;
+  margin: 1.5rem;
 }
 
 .about__sub-title {
   padding: 0.5rem;
-  background-color: brown;
   font-size: 1.25rem;
   font-style: italic;
 }
 
 .about__paragraph {
   overflow: auto;
+  height: 70%;
   height: calc(320px + (320px / 4));
   margin: 1rem 0;
-  background-color: rosybrown;
   color: var(--color-background);
 }
 
-.about-visual__container {
-  background-color: sandybrown;
+.box {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  max-width: 600px;
+  padding: 5px;
+  border: 2px solid var(--color-tertiary);
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-transform: translate3d(-50%, -50%, 0);
+          transform: translate3d(-50%, -50%, 0);
 }
 
-.about-visual__image {
-  background-color: goldenrod;
+.box::before, .box::after {
+  position: absolute;
+  top: 5px;
+  width: 14px;
+  height: 14px;
+  border: 2px solid var(--color-tertiary);
+  color: var(--color-tertiary);
+  content: '•';
+  font-size: 14px;
+  line-height: 12px;
+  text-align: center;
 }
 
-.about-text__container {
-  background-color: darkgoldenrod;
+.box::before {
+  left: 5px;
 }
 
-.about-text__title {
-  background-color: peru;
+.box::after {
+  right: 5px;
 }
 
-.about-text__sub-title {
-  background-color: chocolate;
+.box .box-inner {
+  position: relative;
+  padding: 0.5rem;
+  border: 2px solid var(--color-tertiary);
 }
 
-.about-text__paragraph {
-  background-color: olive;
+.box .box-inner::before, .box .box-inner::after {
+  position: absolute;
+  bottom: -2px;
+  width: 14px;
+  height: 14px;
+  border: 2px solid var(--color-tertiary);
+  color: var(--color-tertiary);
+  content: '•';
+  font-size: 14px;
+  line-height: 12px;
+  text-align: center;
+}
+
+.box .box-inner::before {
+  left: -2px;
+}
+
+.box .box-inner::after {
+  right: -2px;
 }
 
 /* -------------------------------------------------------------------------- *\
