--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -2045,7 +2045,6 @@ input:checked + .slider::before {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 50%;
           flex: 1 1 50%;
-  padding: 0.5rem;
   margin: 1.5rem;
 }
 
@@ -2055,12 +2054,12 @@ input:checked + .slider::before {
 
 .about__container--text {
   width: 100%;
+  min-width: calc(320px - 2rem);
+  max-width: calc((320px / 3) + 320px);
   height: 80vh;
   -webkit-box-flex: 1;
       -ms-flex: 1 1 50%;
           flex: 1 1 50%;
-  padding: 0.5rem;
-  margin: 1.5rem;
 }
 
 .about__sub-title {
@@ -2071,8 +2070,6 @@ input:checked + .slider::before {
 
 .about__paragraph {
   overflow: auto;
-  height: 70%;
-  height: calc(320px + (320px / 4));
   margin: 1rem 0;
   color: var(--color-background);
 }
